--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -18,8 +18,7 @@
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div> -->
 
-<header class="skew">
-</header>
+<header class="skew"></header>
 
 <div class="content-wrapper dark">
     <div class="content-inner-wrapper">
@@ -70,7 +69,49 @@
 </div>
 
 <header class="skew">
-    <h2>Features</h2>
+    <h2>Advanced Features (Free)</h2>
+</header>
+
+<div class="content-wrapper white feature">
+    <div class="content-inner-wrapper main-feature">
+        <div class="feature-text"> 
+            <mat-icon aria-hidden="false" aria-label="FanCam" class="ico">camera_front</mat-icon>
+            <h1>FanCam</h1>
+            <h2>Audience selfies sent to the wall in real time</h2>
+            <p>
+                The FanCam feature is revolutionary for the visuals space. Now your audience can interact by taking a selfy. 
+                The image is then sent directly to the projection or wall. 
+            </p>
+            <p>
+                Until now this has been complicated and very expensive. Visualz makes it turn-key for free ;) 
+            </p>
+        </div>
+        <img src="../../assets/images/crowdcam.jpg" />
+    </div>
+</div>
+
+<header class="skew white"></header>
+
+<div class="content-wrapper white feature">
+    <div class="content-inner-wrapper main-feature">
+        <div class="feature-text"> 
+            <mat-icon aria-hidden="false" aria-label="CrowdScreen" class="ico">mobile_screen_share</mat-icon>
+            <h1>CrowdScreen</h1>
+            <h2>Mobile device flashlight and screen control</h2>
+            <p>
+                The CrowdScreen feature is cutting-edge technology for the lighting industry. 
+                Create amazing visual experiences by incorporating hunderends and thousands of devices.
+            </p>
+            <p>
+                As with the FanCam this is usually complicated and expensive, requiring hardware. Visualz makes it as easy as clicking a button. Still free.
+            </p>
+        </div>
+        <img src="../../assets/images/crowdscreen.jpg" />
+    </div>
+</div>
+
+<header class="skew">
+    <h2>Basic Features (Free)</h2>
 </header>
 
 <div class="content-wrapper dark">
@@ -103,31 +144,24 @@
                 <h1>Easy Output</h1>
                 Output to projector, tvs, LED screens, lighting hardware, mobile devices, and more.
             </li>
+            <!-- 
             <li>
-                <mat-icon aria-hidden="false" aria-label="CrowdScreen">mobile_screen_share</mat-icon>
-                <h1>CrowdScreen</h1>
-                Mobile device control incorporates the flashlight and screen from your audience's mobile devices.
-            </li>
-            <!-- <li>
                 <mat-icon aria-hidden="false" aria-label="RemoteCam">linked_camera</mat-icon>
                 <h1>RemoteCam</h1>
                 Use mobile devices as remote cameras to achieve multiple video streams and angles.
             </li> -->
             <li>
-                <mat-icon aria-hidden="false" aria-label="FanCam">camera_front</mat-icon>
-                <h1>FanCam</h1>
-                Audience selfies sent to the main screen in real time.
-            </li>
-            <li>
                 <mat-icon aria-hidden="false" aria-label="FanCam">settings_remote</mat-icon>
                 <h1>Remote Control</h1>
                 Que tracks from your mobile device with the remote control. Its super jiffy.
             </li>
+            <!--
             <li>
                 <mat-icon aria-hidden="false" aria-label="Laserz">flash_on</mat-icon>
                 <h1>Laserz</h1>
                 Laserz feature integrates VISUALZ Laserz into your set.
             </li>
+            -->
         </ul>
     </div>
     <div class='clearfix'></div>
@@ -140,6 +174,12 @@
         DEMO</button>
 </header>
 -->
+<header class="skew">
+    <h2>Setup</h2>
+</header>
+<div class="content-wrapper white">
+    <img src="../../assets/images/simplefasteasy-mobile.jpg" style="display:block; max-width:300px; margin:0px auto;">
+</div>
 
 <header class="skew big-only">
     <h2>How It Works</h2>
@@ -148,12 +188,7 @@
     <app-htw style="margin:120px auto; display: block;"></app-htw>
 </div>
 
-<header class="skew">
-    <h2>Setup</h2>
-</header>
-<div class="content-wrapper white">
-    <img src="../../assets/images/simplefasteasy-mobile.jpg" style="display:block; max-width:300px; margin:0px auto;">
-</div>
+
 
 <header class="skew">
     <h2>Artist Partners</h2>
