--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -175,7 +175,7 @@
 </header>
 -->
 <header class="skew">
-    <h2>Setup</h2>
+    <h2>Quick Setup</h2>
 </header>
 <div class="content-wrapper white">
     <img src="../../assets/images/simplefasteasy-mobile.jpg" style="display:block; max-width:300px; margin:0px auto;">
