--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -37,7 +37,7 @@
             <div *ngIf="deviceInfo.os != 'Mac'" class="clearfix">
                 <a href="https://visualz-1.s3.us-east-2.amazonaws.com/VISUALZ-installer.rar" target="_blank" mat-raised-button
                     (click)="downloadWindows()" class="pink button">
-                    Download For Windows
+                    Download Free
                 </a>
                 <img class="windows" src="../../assets/images/windows.png" />
             </div>
@@ -50,20 +50,22 @@
                 you are a dj newb or a pro create visuals easily. 
             </p>
 
-            <h2>What's New in Version 1.2.2</h2>
-            <ul>
-                <li>Released 9/27/2019 version 1.2.2 is the first time Visualz has been available for Mac OSx. Yay!</li>
-                <li>Crowdscreen fan cam selfy feature is live.</li>
-                <li>Crowdscreen Link changed to just Crowdscreen.</li>
-                <li>Updates to remote control.</li>
-                <li>Gif optimizations.</li>
-                <li>Beat detection threshold changes.</li>
-            </ul>
+            <div class="big-only">
+                <h2>What's New in Version 1.2.2</h2>
+                <ul>
+                    <li>Released 9/27/2019 version 1.2.2 is the first time Visualz has been available for Mac OSx. Yay!</li>
+                    <li>Crowdscreen fan cam selfy feature is live.</li>
+                    <li>Crowdscreen Link changed to just Crowdscreen.</li>
+                    <li>Updates to remote control.</li>
+                    <li>Gif optimizations.</li>
+                    <li>Beat detection threshold changes.</li>
+                </ul>
 
-            <h2>Bug Fixes</h2>
-            <ul>
-                <li>SMS number correction.</li>
-            </ul>
+                <h2>Bug Fixes</h2>
+                <ul>
+                    <li>SMS number correction.</li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
@@ -74,19 +76,22 @@
 
 <div class="content-wrapper white feature">
     <div class="content-inner-wrapper main-feature">
+        <img src="../../assets/images/crowdcam.jpg" />
         <div class="feature-text"> 
             <mat-icon aria-hidden="false" aria-label="FanCam" class="ico">camera_front</mat-icon>
             <h1>FanCam</h1>
             <h2>Audience selfies sent to the wall in real time</h2>
-            <p>
-                The FanCam feature is revolutionary for the visuals space. Now your audience can interact by taking a selfy. 
-                The image is then sent directly to the projection or wall. 
-            </p>
-            <p>
-                Until now this has been complicated and very expensive. Visualz makes it turn-key for free ;) 
-            </p>
+            <div class="big-only">
+                <p>
+                    The FanCam feature is revolutionary for the visuals space. Now your audience can interact by taking a selfy. 
+                    The image is then sent directly to the projection or wall. 
+                </p>
+                <p>
+                    Until now this has been complicated and very expensive. Visualz makes it turn-key for free ;) 
+                </p>
+            </div>
         </div>
-        <img src="../../assets/images/crowdcam.jpg" />
+        
     </div>
 </div>
 
@@ -94,19 +99,21 @@
 
 <div class="content-wrapper white feature">
     <div class="content-inner-wrapper main-feature">
+        <img src="../../assets/images/crowdscreen.jpg" />
         <div class="feature-text"> 
             <mat-icon aria-hidden="false" aria-label="CrowdScreen" class="ico">mobile_screen_share</mat-icon>
             <h1>CrowdScreen</h1>
             <h2>Mobile device flashlight and screen control</h2>
-            <p>
-                The CrowdScreen feature is cutting-edge technology for the lighting industry. 
-                Create amazing visual experiences by incorporating hunderends and thousands of devices.
-            </p>
-            <p>
-                As with the FanCam this is usually complicated and expensive, requiring hardware. Visualz makes it as easy as clicking a button. Still free.
-            </p>
-        </div>
-        <img src="../../assets/images/crowdscreen.jpg" />
+            <div class="big-only">
+                <p>
+                    The CrowdScreen feature is cutting-edge technology for the lighting industry. 
+                    Create amazing visual experiences by incorporating hunderends and thousands of devices.
+                </p>
+                <p>
+                    As with the FanCam this is usually complicated and expensive, requiring hardware. Visualz makes it as easy as clicking a button. Still free.
+                </p>
+            </div>
+        </div>        
     </div>
 </div>
 
@@ -191,9 +198,9 @@
 
 
 <header class="skew">
-    <h2>Artist Partners</h2>
+    <h2>Artist Collaborators</h2>
 </header>
-<div class="content-wrapper dark">
+<div class="content-wrapper dark small-bottom">
     <div class="">
         <mat-card class="example-card">
             <mat-card-header>
