--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -54,7 +54,7 @@
                 <h2>What's New in Version 1.2.2</h2>
                 <ul>
                     <li>Released 9/27/2019 version 1.2.2 is the first time Visualz has been available for Mac OSx. Yay!</li>
-                    <li>Crowdscreen fan cam selfy feature is live.</li>
+                    <li>Crowdscreen fan cam selfie feature is live.</li>
                     <li>Crowdscreen Link changed to just Crowdscreen.</li>
                     <li>Updates to remote control.</li>
                     <li>Gif optimizations.</li>
@@ -83,7 +83,7 @@
             <h2>Audience selfies sent to the wall in real time</h2>
             <div class="big-only">
                 <p>
-                    The FanCam feature is revolutionary for the visuals space. Now your audience can interact by taking a selfy. 
+                    The FanCam feature is revolutionary for the visuals space. Now your audience can interact by taking a selfie. 
                     The image is then sent directly to the projection or wall. 
                 </p>
                 <p>
