update mark wolffs photo

--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -260,7 +260,7 @@
                 <mat-card-title>Mark Wolff</mat-card-title>
                 <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image src="../../assets/images/mark.jpg" alt="Mark Wolff">
+            <img mat-card-image src="https://i1.sndcdn.com/avatars-000612464100-qf9pzz-t200x200.jpg" alt="Mark Wolff">
             <!-- <mat-card-content>
                 <p>
                     Mark Wolff can turn into an animal. The Whistler, Inn Joy, and Warehouse parties oh my. Mark
