--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,5 +44,5 @@
     <br>
     &copy; VISUALZ 1.2.2 Copyright 2019. All Rights Reserved.
     <br>
-    Created By: karl.steltenpohl [at] gmail.com
+    Created by <a href="https://karl.pb.studio" target="_blank">Karl</a>
 </footer>
