add projections section to homepage

--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -71,8 +71,29 @@
 </div>
 
 <header class="skew">
-    <h2>Advanced Features (Free)</h2>
+    <h2>Features</h2>
 </header>
+
+<div class="content-wrapper white feature">
+    <div class="content-inner-wrapper main-feature">
+        <img src="../../assets/images/projection.jpg" />
+        <div class="feature-text"> 
+            <mat-icon aria-hidden="false" aria-label="FanCam" class="ico wide">cast_connected</mat-icon>
+            <h1>Projection</h1>
+            <h2>Visuals that change to the beat of your music.</h2>
+            <div class="big-only">
+                <p>
+                    Visualz is a is creating projections that automatically sync and change with the music in realtime.
+                </p>
+                <p>
+                    Immideately create an awesome experience at your show, event, or party with a visual composition that bumps. 
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<header class="skew white"></header>
 
 <div class="content-wrapper white feature">
     <div class="content-inner-wrapper main-feature">
@@ -91,7 +112,6 @@
                 </p>
             </div>
         </div>
-        
     </div>
 </div>
 
@@ -118,7 +138,7 @@
 </div>
 
 <header class="skew">
-    <h2>Basic Features (Free)</h2>
+    <h2>More Features</h2>
 </header>
 
 <div class="content-wrapper dark">
