add projections section to homepage

--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -86,7 +86,7 @@
                     Visualz is a is creating projections that automatically sync and change with the music in realtime.
                 </p>
                 <p>
-                    Immideately create an awesome experience at your show, event, or party with a visual composition that bumps. 
+                    Immediately create an awesome experience at your show, event, or party with a visual composition that bumps. 
                 </p>
             </div>
         </div>
