--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -80,7 +80,7 @@
         <div class="feature-text"> 
             <mat-icon aria-hidden="false" aria-label="FanCam" class="ico wide">cast_connected</mat-icon>
             <h1>Projection</h1>
-            <h2>Visuals that change to the beat of your music.</h2>
+            <h2>Visuals that change to the beat of your music</h2>
             <div class="big-only">
                 <p>
                     Visualz is a is creating projections that automatically sync and change with the music in realtime.
