add projections section to homepage

--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -83,7 +83,7 @@
             <h2>Visuals that change to the beat of your music</h2>
             <div class="big-only">
                 <p>
-                    Visualz is a is creating projections that automatically sync and change with the music in realtime.
+                    Visualz is a tool for creating projections that automatically sync and change with the music in realtime.
                 </p>
                 <p>
                     Immediately create an awesome experience at your show, event, or party with a visual composition that bumps. 
