added zack joseph

--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -304,6 +304,19 @@
                 <a href="https://www.facebook.com/johnnynonstop/" target="_blank" mat-button>More Info</a>
             </mat-card-actions>
         </mat-card>
+        <mat-card class="example-card">
+            <mat-card-header>
+                <mat-card-title>Zack Joseph</mat-card-title>
+                <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image
+                src="https://i1.sndcdn.com/avatars-000343177915-enbmz2-t200x200.jpg"
+                alt="Zack Joseph">
+
+            <mat-card-actions>
+                <a href="https://www.facebook.com/zj2870" target="_blank" mat-button>More Info</a>
+            </mat-card-actions>
+        </mat-card>
         <div class="clearfix"></div>
     </div>
 </div>
