added community disqus to home page

--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -216,6 +216,17 @@
 </div>
 
 
+<header class="skew big-only">
+    <h2>What Do You Want In v1.3.0 (the next version)</h2>
+</header>
+
+
+<div class="content-wrapper white feature">
+    <div class="content-inner-wrapper main-feature">
+
+            <div id="disqus_thread" style="margin:200px auto;"></div>
+    </div>
+</div>
 
 <header class="skew">
     <h2>Artist Collaborators</h2>
