--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -302,6 +302,19 @@
             </mat-card-actions>
         </mat-card>
 
+        <mat-card class="example-card">
+            <mat-card-header>
+                <mat-card-title>Nick Quicktastic</mat-card-title>
+                <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image
+                src="https://scontent-ort2-2.cdninstagram.com/vp/88d8f288f9df1e87ded6d5a47ada1d04/5E45DC0B/t51.2885-19/s320x320/67145873_432528487357419_8463760023485415424_n.jpg?_nc_ht=scontent-ort2-2.cdninstagram.com"
+                alt="Nick Quicktastic">
+            <mat-card-actions>
+                <a href="https://www.stylinoutnetwork.com/quicktastic" target="_blank" mat-button>More Info</a>
+            </mat-card-actions>
+        </mat-card>
+
         <div class="clearfix"></div>
     </div>
 </div>
