--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -44,7 +44,7 @@
 
         </div>
         <div class="release-notes">
-            <h1>Visualz</h1>
+            <h1>VISUALZ</h1>
             <p>
                 Visualz brings real-time audio responsiveness and video composition into one place to create great visuals that go to your music's beat. Whether 
                 you are a dj newb or a pro create visuals easily. 
