added pages to footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,8 @@
 <router-outlet></router-outlet>
 
 <footer *ngIf="!interactive">
+    <a routerLink="/about">About</a> |
+    <a routerLink="/investors">Investors</a> |
     <a routerLink="/support">Support</a> |
     <a routerLink="/how-it-works">How It Works</a> |
     <a routerLink="/terms-conditions">Terms &amp; Conditions</a> |
