--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -25,18 +25,18 @@
         <div class="download-area">
 
             <img src="../../assets/images/icon.ico" class="ico" />
-            
+
             <div *ngIf="deviceInfo.os == 'Mac'" class="clearfix">
-                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-1.2.2.dmg" target="_blank" mat-raised-button
-                    (click)="downloadMac()" class="pink button">
+                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/Visualz-1.2.2.dmg" target="_blank"
+                    mat-raised-button (click)="downloadMac()" class="pink button">
                     Download Free
                 </a>
                 <img class="mac" src="../../assets/images/macos.png" />
             </div>
 
             <div *ngIf="deviceInfo.os != 'Mac'" class="clearfix">
-                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/VISUALZ-installer.rar" target="_blank" mat-raised-button
-                    (click)="downloadWindows()" class="pink button">
+                <a href="https://visualz-1.s3.us-east-2.amazonaws.com/VISUALZ-installer.rar" target="_blank"
+                    mat-raised-button (click)="downloadWindows()" class="pink button">
                     Download Free
                 </a>
                 <img class="windows" src="../../assets/images/windows.png" />
@@ -46,14 +46,16 @@
         <div class="release-notes">
             <h1>VISUALZ</h1>
             <p>
-                Visualz brings real-time audio responsiveness and video composition into one place to create great visuals that go to your music's beat. Whether 
-                you are a dj newb or a pro create visuals easily. 
+                Visualz brings real-time audio responsiveness and video composition into one place to create great
+                visuals that go to your music's beat. Whether
+                you are a dj newb or a pro create visuals easily.
             </p>
 
             <div class="big-only">
                 <h2>What's New in Version 1.2.2</h2>
                 <ul>
-                    <li>Released 9/27/2019 version 1.2.2 is the first time Visualz has been available for Mac OSx. Yay!</li>
+                    <li>Released 9/27/2019 version 1.2.2 is the first time Visualz has been available for Mac OSx. Yay!
+                    </li>
                     <li>Crowdscreen fan cam selfie feature is live.</li>
                     <li>Crowdscreen Link changed to just Crowdscreen.</li>
                     <li>Updates to remote control.</li>
@@ -77,16 +79,18 @@
 <div class="content-wrapper white feature">
     <div class="content-inner-wrapper main-feature">
         <img src="../../assets/images/projection.jpg" />
-        <div class="feature-text"> 
+        <div class="feature-text">
             <mat-icon aria-hidden="false" aria-label="FanCam" class="ico wide">cast_connected</mat-icon>
             <h1>Projection</h1>
             <h2>Visuals that change to the beat of your music</h2>
             <div class="big-only">
                 <p>
-                    Visualz is a tool for creating projections that automatically sync and change with the music in realtime.
+                    Visualz is a tool for creating projections that automatically sync and change with the music in
+                    realtime.
                 </p>
                 <p>
-                    Immediately create an awesome experience at your show, event, or party with a visual composition that bumps. 
+                    Immediately create an awesome experience at your show, event, or party with a visual composition
+                    that bumps.
                 </p>
             </div>
         </div>
@@ -98,17 +102,18 @@
 <div class="content-wrapper white feature">
     <div class="content-inner-wrapper main-feature">
         <img src="../../assets/images/crowdcam.jpg" />
-        <div class="feature-text"> 
+        <div class="feature-text">
             <mat-icon aria-hidden="false" aria-label="FanCam" class="ico">camera_front</mat-icon>
             <h1>FanCam</h1>
             <h2>Audience selfies sent to the wall in real time</h2>
             <div class="big-only">
                 <p>
-                    The FanCam feature is revolutionary for the visuals space. Now your audience can interact by taking a selfie. 
-                    The image is then sent directly to the projection or wall. 
+                    The FanCam feature is revolutionary for the visuals space. Now your audience can interact by taking
+                    a selfie.
+                    The image is then sent directly to the projection or wall.
                 </p>
                 <p>
-                    Until now this has been complicated and very expensive. Visualz makes it turn-key for free ;) 
+                    Until now this has been complicated and very expensive. Visualz makes it turn-key for free ;)
                 </p>
             </div>
         </div>
@@ -120,20 +125,21 @@
 <div class="content-wrapper white feature">
     <div class="content-inner-wrapper main-feature">
         <img src="../../assets/images/crowdscreen.jpg" />
-        <div class="feature-text"> 
+        <div class="feature-text">
             <mat-icon aria-hidden="false" aria-label="CrowdScreen" class="ico">mobile_screen_share</mat-icon>
             <h1>CrowdScreen</h1>
             <h2>Mobile device flashlight and screen control</h2>
             <div class="big-only">
                 <p>
-                    The CrowdScreen feature is cutting-edge technology for the lighting industry. 
+                    The CrowdScreen feature is cutting-edge technology for the lighting industry.
                     Create amazing visual experiences by incorporating hunderends and thousands of devices.
                 </p>
                 <p>
-                    As with the FanCam this is usually complicated and expensive, requiring hardware. Visualz makes it as easy as clicking a button. Still free.
+                    As with the FanCam this is usually complicated and expensive, requiring hardware. Visualz makes it
+                    as easy as clicking a button. Still free.
                 </p>
             </div>
-        </div>        
+        </div>
     </div>
 </div>
 
@@ -215,14 +221,37 @@
     <app-htw style="margin:120px auto; display: block;"></app-htw>
 </div>
 
+<!-- XCHANGE -->
+<header class="skew big-only">
+    <h2>THE XCHANGE</h2>
+</header>
+<div class="content-wrapper white feature">
+    <div class="content-inner-wrapper main-feature">
+        <img src="../../assets/images/projection.jpg" />
+        <div class="feature-text">
+            <mat-icon aria-hidden="false" aria-label="XCHANGE" class="ico wide">store</mat-icon>
+            <h1>THE XCHANGE</h1>
+            <h2>Find visuals for your set</h2>
+            <div class="big-only">
+                <p>
+                    The XCHANGE is where you find visual sets and tracks pre-made by vjs and artists
+                    available to download and use immedeately.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<header class="skew white"></header>
+
+
+<!-- DISQUS -->
 <header class="skew big-only">
     <h2>What Do You Want In v1.3.0 (the next version)</h2>
 </header>
-
 <div class="content-wrapper white feature">
     <div class="content-inner-wrapper main-feature">
 
-            <div id="disqus_thread" style="margin:200px auto;"></div>
+        <div id="disqus_thread" style="margin:200px auto;"></div>
     </div>
 </div>
 
@@ -231,7 +260,7 @@
 </header>
 <div class="content-wrapper dark small-bottom">
     <div class="">
-        
+
         <mat-card class="example-card">
             <mat-card-header>
                 <mat-card-title>Sam White</mat-card-title>
@@ -294,9 +323,7 @@
                 <mat-card-title>Zack Joseph</mat-card-title>
                 <mat-card-subtitle>DJ [Chicago]</mat-card-subtitle>
             </mat-card-header>
-            <img mat-card-image
-                src="https://i1.sndcdn.com/avatars-000343177915-enbmz2-t200x200.jpg"
-                alt="Zack Joseph">
+            <img mat-card-image src="https://i1.sndcdn.com/avatars-000343177915-enbmz2-t200x200.jpg" alt="Zack Joseph">
             <mat-card-actions>
                 <a href="https://www.facebook.com/zj2870" target="_blank" mat-button>More Info</a>
             </mat-card-actions>
