--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -1,58 +1,63 @@
 <div class="content-wrapper normal">
-  <div class="content-inner-wrapper">
-    <h1 class="center">Resources</h1>
+    <div class="content-inner-wrapper">
+        <h1 class="center">Resources</h1>
 
-    <h2>Where To Find Video Loops</h2>
+        <h2>Where To Find Video Loops</h2>
 
-    <p>
-      Below is a list of places you can find great content to use in VISUALZ.
-    </p>
+        <p>
+            Below is a list of places you can find great content to use in VISUALZ.
+        </p>
 
-    <ul>
-      <li><a href="https://www.beeple-crap.com/vjloops" target="_blank">Beeple Crap</a> - This guy is amazing. And puts
-        out videos for commercial and non-commercial use. His videos work great in VISUALZ!</li>
-      <li><a href="https://docoptic.com/free/" target="_blank">DocOptic</a></li>
-    </ul>
+        <ul>
+            <li><a href="https://www.beeple-crap.com/vjloops" target="_blank">Beeple Crap</a> - This guy is amazing. And
+                puts
+                out videos for commercial and non-commercial use. His videos work great in VISUALZ!</li>
+            <li><a href="https://docoptic.com/free/" target="_blank">DocOptic</a></li>
+        </ul>
 
-    <h3>Giphy</h3>
+        <h3>Giphy</h3>
 
-    <p>
-      Giphy is an amazing resource. The VISUALZ team has always held a special place
-      in its heart for Giphy even before we existed. VISUALZ comes with a built-in Giphy
-      content feature.
-    </p>
+        <p>
+            <a href="https://giphy.com" target="_blank">https://giphy.com</a> - Giphy is an amazing resource. The
+            VISUALZ team has always held a special place
+            in its heart for Giphy even before we existed. VISUALZ comes with a built-in Giphy
+            content feature.
+        </p>
 
-    <h2>How To Do Live Visuals</h2>
+        <h2>How To Do Live Visuals</h2>
 
-    <p>
-      What you will need:
-    </p>
+        <p>
+            Visuals Starter Kit:
+        </p>
 
-    <ul>
-      <li>Computer to run the VISUALZ software.</li>
-      <li>Projector, TV screen, or computer monitor.</li>
-      <li>HDMI or VGA cable depending on your hardware.</li>
-    </ul>
+        <ul>
+            <li>Windows or Apple OSx computer to run the VISUALZ software</li>
+            <li>Projector, LED wall, TV screen, or computer monitor</li>
+            <li>Projector screen</li>
+            <li>Projector screen stand</li>
+            <li><a
+                    href="https://www.google.com/search?ei=ozIlXYuVLoWltQaclJHICg&q=portable+power+station&oq=portable+power+station&gs_l=psy-ab.3..0l10.1037484.1041500..1042097...0.0..3.693.6667.0j11j2j2j4j3....2..0....1..gws-wiz.......0i71j0i131j0i67j0i273.mZnCJ9faEWY">
+                    Portable power station
+                </a>
+            </li>
+            <li>Big &amp; little zip ties</li>
+            <li>Power Strip</li>
+            <li>Extension chord</li>
+            <li>Apple tv &amp; remote</li>
+            <li>HDMI cable</li>
+            <li>VGA cable</li>
+            <li>HDMI -> VGA adapter</li>
+        </ul>
 
-    <p>
-      Other useful things you may need:
-    </p>
+        <p>
+            Once you have your gear your ready. Creating a track or a set is easy in VISUALZ. Checkout the <a
+                routerLink="/how-it-works">Learn Page</a> to see how to do it. But trust me it's very simple.
+        </p>
 
-    <ul>
-      <li>Projector screen</li>
-      <li><a
-          href="https://www.google.com/search?ei=ozIlXYuVLoWltQaclJHICg&q=portable+power+station&oq=portable+power+station&gs_l=psy-ab.3..0l10.1037484.1041500..1042097...0.0..3.693.6667.0j11j2j2j4j3....2..0....1..gws-wiz.......0i71j0i131j0i67j0i273.mZnCJ9faEWY">Portable
-          power station</a></li>
-    </ul>
-
-    <p>
-      Once you have your gear your ready. Creating a track or a set is easy in VISUALZ. Checkout the <a
-        routerLink="/how-it-works">Learn Page</a> to see how to do it. But trust me it's very simple.
-    </p>
-
-    <p>
-      When you are done composing your set in VISUALZ. Push the play button, and then the fullscreen button. You're
-      doing it.
-    </p>
-  </div>
+        <p>
+            When you are done composing your set in VISUALZ. Push the play button, and then the fullscreen button.
+            You're
+            doing it.
+        </p>
+    </div>
 </div>
