--- a/src/styles.scss
+++ b/src/styles.scss
@@ -412,6 +412,12 @@ header {
 
         .mat-button {
             padding: 0px 10px;
+
+            img {
+                width: 30px;
+                height: 30px;
+                border-radius: 15px;
+            }
         }
     }
 
